Fix sentence [ci skip]

--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -127,10 +127,9 @@ your own.
 
 ### Resizable text classification architectures {#resizable-textcat}
 
-Previously, a trained [`TextCategorizer`](/api/textcategorizer) architectures
-could not be resized, meaning that you couldn't add new labels to an already
-trained text classifier. In spaCy v3.1, the
-[TextCatCNN](/api/architectures#TextCatCNN) and
+Previously, the [`TextCategorizer`](/api/textcategorizer) architectures could
+not be resized, meaning that you couldn't add new labels to an already trained
+model. In spaCy v3.1, the [TextCatCNN](/api/architectures#TextCatCNN) and
 [TextCatBOW](/api/architectures#TextCatBOW) architectures are now resizable,
 while ensuring that the predictions for the old labels remain the same.
 
