Update features [ci skip]

--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -144,6 +144,14 @@ vectors.
 $ python -m spacy assemble config.cfg ./output
 ```
 
+### Pretty pipeline package READMEs {#package-readme}
+
+The [`spacy package`](/api/cli#package) command now auto-generates a pretty
+`README.md` based on the pipeline information defined in the `meta.json`. This
+includes a table with a general overview, as well as the label scheme and
+accuracy figures, if available. For an example, see the
+[model releases](https://github.com/explosion/spacy-models/releases).
+
 ### Support for streaming large or infinite corpora {#streaming-corpora}
 
 > #### config.cfg (excerpt)
