--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -115,15 +115,18 @@ See the [models directory](/models) for an overview of all available trained
 pipelines and the [training guide](/usage/training) for details on how to train
 your own.
 
-<!-- TODO: thank contributors and update with final numbers -->
+Thanks to Carlos Rodríguez Penagos and the
+[Barcelona Supercomputing Center](https://temu.bsc.es/) for their contributions
+for Catalan and to Kenneth Enevoldsen for Danish. For additional Danish
+pipelines, check out [DaCy](https://github.com/KennethEnevoldsen/DaCy).
 
-| Package                                           | Language | Tagger | Parser |  NER |
-| ------------------------------------------------- | -------- | -----: | -----: | ---: |
-| [`ca_core_news_sm`](/models/ca#ca_core_news_sm)   | Catalan  |        |        |      |
-| [`ca_core_news_md`](/models/ca#ca_core_news_md)   | Catalan  |        |        |      |
-| [`ca_core_news_lg`](/models/ca#ca_core_news_lg)   | Catalan  |        |        |      |
-| [`ca_core_news_trf`](/models/ca#ca_core_news_trf) | Catalan  |        |        |      |
-| [`da_core_news_trf`](/models/da#da_core_news_trf) | Danish   |        |        |      |
+| Package                                           | Language | UPOS | Parser LAS |  NER F |
+| ------------------------------------------------- | -------- | ---: | ---------: | -----: |
+| [`ca_core_news_sm`](/models/ca#ca_core_news_sm)   | Catalan  | 98.2 |       87.4 |   79.8 |
+| [`ca_core_news_md`](/models/ca#ca_core_news_md)   | Catalan  | 98.3 |       88.2 |   84.0 |
+| [`ca_core_news_lg`](/models/ca#ca_core_news_lg)   | Catalan  | 98.5 |       88.4 |   84.2 |
+| [`ca_core_news_trf`](/models/ca#ca_core_news_trf) | Catalan  | 98.9 |       93.0 |   91.2 |
+| [`da_core_news_trf`](/models/da#da_core_news_trf) | Danish   | 98.0 |       85.0 |   82.9 |
 
 ### Resizable text classification architectures {#resizable-textcat}
 
