Formatting and preliminary intro [ci skip]

--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -8,7 +8,16 @@ menu:
 
 ## New Features {#features hidden="true"}
 
-<!-- TODO: intro -->
+It's been great to see the adoption of the new spaCy v3, which introduced
+[transformer-based](/usage/embeddings-transformers) pipelines, a new
+[config and training system](/usage/training) for reproducible experiments, a
+new [projects system](/usage/projects) for end-to-end workflows, and many
+[other features](/usage/v3). Version 3.1 adds a bunch of new features on top of
+it, including the ability to use predicted annotations during training, a new
+`SpanCategorizer` component for predicting arbitrary and potentially overlapping
+spans, support for partial incorrect annotations in the entity recognizer, new
+trained pipelines for Catalan and Danish, as well as many other bug fixes and
+improvements.
 
 ### Using predicted annotations during training {#predicted-annotations-training}
 
@@ -115,10 +124,10 @@ See the [models directory](/models) for an overview of all available trained
 pipelines and the [training guide](/usage/training) for details on how to train
 your own.
 
-Thanks to Carlos Rodríguez Penagos and the
-[Barcelona Supercomputing Center](https://temu.bsc.es/) for their contributions
-for Catalan and to Kenneth Enevoldsen for Danish. For additional Danish
-pipelines, check out [DaCy](https://github.com/KennethEnevoldsen/DaCy).
+> Thanks to Carlos Rodríguez Penagos and the
+> [Barcelona Supercomputing Center](https://temu.bsc.es/) for their
+> contributions for Catalan and to Kenneth Enevoldsen for Danish. For additional
+> Danish pipelines, check out [DaCy](https://github.com/KennethEnevoldsen/DaCy).
 
 | Package                                           | Language | UPOS | Parser LAS |  NER F |
 | ------------------------------------------------- | -------- | ---: | ---------: | -----: |
