Update intro [ci skip]

--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -10,14 +10,13 @@ menu:
 
 It's been great to see the adoption of the new spaCy v3, which introduced
 [transformer-based](/usage/embeddings-transformers) pipelines, a new
-[config and training system](/usage/training) for reproducible experiments, a
-new [projects system](/usage/projects) for end-to-end workflows, and many
-[other features](/usage/v3). Version 3.1 adds a bunch of new features on top of
-it, including the ability to use predicted annotations during training, a new
-`SpanCategorizer` component for predicting arbitrary and potentially overlapping
-spans, support for partial incorrect annotations in the entity recognizer, new
-trained pipelines for Catalan and Danish, as well as many other bug fixes and
-improvements.
+[config and training system](/usage/training) for reproducible experiments,
+[projects](/usage/projects) for end-to-end workflows, and many
+[other features](/usage/v3). Version 3.1 adds more on top of it, including the
+ability to use predicted annotations during training, a new `SpanCategorizer`
+component for predicting arbitrary and potentially overlapping spans, support
+for partial incorrect annotations in the entity recognizer, new trained
+pipelines for Catalan and Danish, as well as many bug fixes and improvements.
 
 ### Using predicted annotations during training {#predicted-annotations-training}
 
