Update wording [ci skip]
Co-authored-by: Sofie Van Landeghem <svlandeg@users.noreply.github.com>

--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -24,7 +24,7 @@ By default, components are updated in isolation during training, which means
 that they don't see the predictions of any earlier components in the pipeline.
 The new
 [`[training.annotating_components]`](/usage/training#annotating-components)
-config setting lets you specify pipeline component names that should set
+config setting lets you specify pipeline components that should set
 annotations on the predicted docs during training. This makes it easy to use the
 predictions of a previous component in the pipeline as features for a subsequent
 component, e.g. the dependency labels in the tagger:
