Add note about updating with fill-config

--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -24,10 +24,10 @@ By default, components are updated in isolation during training, which means
 that they don't see the predictions of any earlier components in the pipeline.
 The new
 [`[training.annotating_components]`](/usage/training#annotating-components)
-config setting lets you specify pipeline components that should set
-annotations on the predicted docs during training. This makes it easy to use the
-predictions of a previous component in the pipeline as features for a subsequent
-component, e.g. the dependency labels in the tagger:
+config setting lets you specify pipeline components that should set annotations
+on the predicted docs during training. This makes it easy to use the predictions
+of a previous component in the pipeline as features for a subsequent component,
+e.g. the dependency labels in the tagger:
 
 ```ini
 ### config.cfg (excerpt) {highlight="7,12"}
@@ -227,6 +227,19 @@ working as expected, you can update the spaCy version requirements in the
 - "spacy_version": ">=3.0.0,<3.1.0",
 + "spacy_version": ">=3.0.0,<3.2.0",
 ```
+
+### Updating v3.0 configs
+
+To update a config from spaCy v3.0 with the new v3.1 settings, run
+[`init fill-config`](/api/cli#init-fill-config):
+
+```bash
+python -m spacy init fill-config config-v3.0.cfg config-v3.1.cfg
+```
+
+In many cases (`spacy train`, `spacy.load()`), the new defaults will be filled
+in automatically, but you'll need to fill in the new settings to run
+[`debug config`](/api/cli#debug) and [`debug data`](/api/cli#debug-data).
 
 ### Sourcing pipeline components with vectors {#source-vectors}
 
