Update with HF hub integration [ci skip]

--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -199,6 +199,41 @@ sure you have the
 [`spacy-lookups-data`](https://github.com/explosion/spacy-lookups-data) package
 installed, which provides the relevant tables.
 
+### Upload your pipelines to the Hugging Face Hub {#huggingface-hub}
+
+The [Hugging Face Hub](https://huggingface.co/) lets you upload models and share
+them with others, and it now supports spaCy pipelines out-of-the-box. The new
+[`spacy-huggingface-hub`](https://github.com/explosion/spacy-huggingface-hub)
+package automatically adds the `huggingface-hub` command to your `spacy` CLI. It
+lets you upload any pipelines packaged with [`spacy package`](/api/cli#package)
+and `--build wheel` and takes care of auto-generating all required meta
+information.
+
+After uploading, you'll get a live URL for your model page that includes all
+details, files and interactive visualizers, as well as a direct URL to the wheel
+file that you can install via `pip install`. For examples, check out the
+[spaCy pipelines](https://huggingface.co/spacy) we've uploaded.
+
+```cli
+$ pip install spacy-huggingface-hub
+$ huggingface-cli login
+$ python -m spacy package ./en_ner_fashion ./output --build wheel
+$ cd ./output/en_ner_fashion-0.0.0/dist
+$ python -m spacy huggingface-hub push en_ner_fashion-0.0.0-py3-none-any.whl
+```
+
+You can also integrate the upload command into your
+[project template](/usage/projects#huggingface_hub) to automatically upload your
+packaged pipelines after training.
+
+<Project id="integrations/huggingface_hub">
+
+Get started with uploading your models to the Hugging Face hub using our project
+template. It trains a simple pipeline, packages it and uploads it if the
+packaged model has changed. This makes it easy to deploy your models end-to-end.
+
+</Project>
+
 ## Notes about upgrading from v3.0 {#upgrading}
 
 ### Pipeline package version compatibility {#version-compat}
