Update v3.1 usage docs

--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -68,7 +68,11 @@ that proposes candidate spans, which may or may not overlap, and a labeler model
 that predicts zero or more labels for each candidate. The predicted spans are
 available via the [`Doc.spans`](/api/doc#spans) container.
 
-<!-- TODO: example, getting started (init config?), maybe project template -->
+<Project id="experimental/ner_spancat">
+
+This project trains a span categorizer for Indonesian NER.
+
+</Project>
 
 <Infobox title="Tip: Create data with Prodigy's new span annotation UI">
 
@@ -307,3 +311,10 @@ provide warnings if the source and target pipelines don't contain the same
 vectors. If you are sourcing a rule-based component like an entity ruler or
 lemmatizer that does not use the vectors as a model feature, then this warning
 can be safely ignored.
+
+### Warnings {#warnings}
+
+Logger warnings have been converted to Python warnings. Use
+[`warnings.filterwarnings`](https://docs.python.org/3/library/warnings.html#warnings.filterwarnings)
+or the new helper method `spacy.errors.filter_warning(action, error_msg='')` to
+manage warnings.
