--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -858,9 +858,9 @@ attribute ruler before training using the `[initialize]` block of your config.
 
 To use tables like `lexeme_prob` when training a model from scratch, you need
 to add an entry to the `initialize` block in your config. Here's what that
-looks like for the pretrained models:
+looks like for the existing trained pipelines:
 
-```
+```ini
 [initialize.lookups]
 @misc = "spacy.LookupsDataLoader.v1"
 lang = ${nlp.lang}
