--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -225,7 +225,8 @@ recommend running your test suite to verify that the pipeline still performs as
 expected.
 
 If you save your pipeline with `nlp.to_disk()`, it will be saved in the new v1.1
-format and should be fully compatible with
-`spacy-transformers v1.1. If you're using one of the [trained pipelines](/models) we provide, you should run [`spacy
-download`](/api/cli#download) to update to the latest version. To see an overview of all installed packages and their compatibility, you can run [`spacy
-validate`](/api/cli#validate).
+format and should be fully compatible with `spacy-transformers` v1.1. If you're
+using one of the [trained pipelines](/models) we provide, you should run
+[`spacy download`](/api/cli#download) to update to the latest version. To see an
+overview of all installed packages and their compatibility, you can run
+[`spacy validate`](/api/cli#validate).
