--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -105,7 +105,7 @@ For the default project settings with 1M (2.6G) tokenized training texts and 50K
 Korean UD vector and pipeline training, comparing standard fasttext vs. floret
 vectors.
 
-For the default project settings With 1M (3.3G) tokenized training texts and 50K
+For the default project settings with 1M (3.3G) tokenized training texts and 50K
 300-dim vectors, ~800K keys for the standard vectors:
 
 | Vectors                                      |      TAG |      POS |  DEP UAS |  DEP LAS |
