--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -143,10 +143,8 @@ output and there is new support for
 spaCy v3.2 adds a new transformer pipeline package for Japanese
 [`ja_core_news_trf`](https://spacy.io/models/ja#ja_core_news_trf), which uses
 the `basic` pretokenizer instead of `mecab` to limit the number of dependencies
-required for the pipeline.
-
-> Thanks to Hiroshi Matsuda and the spaCy Japanese community for their
-> contributions!
+required for the pipeline. Thanks to Hiroshi Matsuda and the spaCy Japanese
+community for their contributions!
 
 ### Pipeline updates {#pipeline-updates}
 
