--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -164,11 +164,11 @@ Additional pipeline updates:
 
 ### Additional language updates {#language-updates}
 
-- New Irish lemmatizer
-- New Portuguese noun chunks
-- Improved Spanish noun chunks
-- Additional updates for: Bulgarian, Catalan, Sinhala, Spanish, Tagalog,
-  Tigrinya and Vietnamese
+- New Irish lemmatizer.
+- New Portuguese noun chunks.
+- Improved Spanish noun chunks.
+- Additional updates for Bulgarian, Catalan, Sinhala, Spanish, Tagalog,
+  Tigrinya and Vietnamese.
 
 ## Notes about upgrading from v3.1 {#upgrading}
 
