--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -66,7 +66,7 @@ version of [fastText](https://fasttext.cc) that combines fastText's subwords
 with Bloom embeddings for compact, full-coverage vectors. Using subwords means
 that there are no OOV words and due to Bloom embeddings, the vector table can be
 kept very small at <100K entries. Bloom embeddings are already used by
-[HashEmbed](https://thinc.ai/docs/api-layers#hashembed) used by
+[HashEmbed](https://thinc.ai/docs/api-layers#hashembed) in
 [`tok2vec`](https://spacy.io/api/architectures#tok2vec-arch) for compact spaCy
 models.
 
