Fix project links

--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -72,7 +72,7 @@ models.
 
 Several new demo projects to show how to use floret vectors:
 
-<Project id="pipeline/floret_vectors_demo">
+<Project id="pipelines/floret_vectors_demo">
 
 Train toy English floret vectors and import them into a spaCy pipeline.
 
@@ -83,7 +83,7 @@ vectors for full spaCy pipelines. For agglutinative languages like Finnish or
 Korean, there are large improvements in performance due to the use of subwords
 (no OOV words!), with a vector table containing merely 50K entries.
 
-<Project id="pipeline/floret_fi_core_demo">
+<Project id="pipelines/floret_fi_core_demo">
 
 Finnish UD+NER vector and pipeline training, comparing standard fasttext vs.
 floret vectors.
@@ -100,7 +100,7 @@ For the default project settings with 1M (2.6G) tokenized training texts and 50K
 
 </Project>
 
-<Project id="pipeline/floret_ko_ud_demo">
+<Project id="pipelines/floret_ko_ud_demo">
 
 Korean UD vector and pipeline training, comparing standard fasttext vs. floret
 vectors.
@@ -167,8 +167,8 @@ Additional pipeline updates:
 - New Irish lemmatizer.
 - New Portuguese noun chunks.
 - Improved Spanish noun chunks.
-- Additional updates for Bulgarian, Catalan, Sinhala, Spanish, Tagalog,
-  Tigrinya and Vietnamese.
+- Additional updates for Bulgarian, Catalan, Sinhala, Spanish, Tagalog, Tigrinya
+  and Vietnamese.
 
 ## Notes about upgrading from v3.1 {#upgrading}
 
