--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -19,7 +19,7 @@ Accelerate library for matrix multiplication.
 pip install spacy[apple]
 ```
 
-More details: https://github.com/explosion/thinc-apple-ops]
+More details: https://github.com/explosion/thinc-apple-ops
 
 </Infobox>
 
