Minimal intro, floret python module

--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -8,7 +8,11 @@ menu:
 
 ## New Features {#features hidden="true"}
 
-Intro.
+spaCy v3.2 adds support for [`floret`](https://github.com/explosion/floret)
+vectors, makes custom doc creation and scoring easier, and includes many bug
+fixes and improvements. For the trained pipelines, there's a new transformer
+pipeline for Japanese and the Universal Dependencies training data has been
+updated across the board to the most recent release.
 
 <Infobox title="Improve performance for spaCy on Apple M1 with AppleOps" variant="warning" emoji="📣">
 
@@ -61,14 +65,21 @@ doc = nlp(doc)
 
 ### Support for floret vectors {#vectors}
 
-We have published [floret](https://github.com/explosion/floret), an extended
+We have published [`floret`](https://github.com/explosion/floret), an extended
 version of [fastText](https://fasttext.cc) that combines fastText's subwords
 with Bloom embeddings for compact, full-coverage vectors. Using subwords means
-that there are no OOV words and due to Bloom embeddings, the vector table can be
-kept very small at <100K entries. Bloom embeddings are already used by
+that there are no OOV words and due to Bloom embeddings, the vector table can
+be kept very small at <100K entries. Bloom embeddings are already used by
 [HashEmbed](https://thinc.ai/docs/api-layers#hashembed) in
 [`tok2vec`](https://spacy.io/api/architectures#tok2vec-arch) for compact spaCy
 models.
+
+For easy integration, floret includes a [Python
+wrapper](https://github.com/explosion/floret/blob/main/python/README.md):
+
+```bash
+pip install floret
+```
 
 Several new demo projects to show how to use floret vectors:
 
