--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -81,7 +81,7 @@ wrapper](https://github.com/explosion/floret/blob/main/python/README.md):
 pip install floret
 ```
 
-Several new demo projects to show how to use floret vectors:
+A demo project shows how to train and import floret vectors:
 
 <Project id="pipelines/floret_vectors_demo">
 
