--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -68,14 +68,14 @@ doc = nlp(doc)
 We have published [`floret`](https://github.com/explosion/floret), an extended
 version of [fastText](https://fasttext.cc) that combines fastText's subwords
 with Bloom embeddings for compact, full-coverage vectors. Using subwords means
-that there are no OOV words and due to Bloom embeddings, the vector table can
-be kept very small at <100K entries. Bloom embeddings are already used by
+that there are no OOV words and due to Bloom embeddings, the vector table can be
+kept very small at <100K entries. Bloom embeddings are already used by
 [HashEmbed](https://thinc.ai/docs/api-layers#hashembed) in
 [`tok2vec`](https://spacy.io/api/architectures#tok2vec-arch) for compact spaCy
 models.
 
-For easy integration, floret includes a [Python
-wrapper](https://github.com/explosion/floret/blob/main/python/README.md):
+For easy integration, floret includes a
+[Python wrapper](https://github.com/explosion/floret/blob/main/python/README.md):
 
 ```bash
 pip install floret
@@ -159,7 +159,7 @@ community for their contributions!
 
 ### Pipeline updates {#pipeline-updates}
 
-Additional pipeline updates:
+Additional trained pipeline updates:
 
 - All Universal Dependencies training data has been updated v2.8.
 - The Catalan data, tokenizer and lemmatizer have been updated, thanks to Carlos
@@ -173,7 +173,7 @@ Additional pipeline updates:
 - The English attribute ruler patterns have been overhauled to improve
   `Token.pos` and `Token.morph`.
 
-### Additional language updates {#language-updates}
+### Language updates {#language-updates}
 
 - New Irish lemmatizer.
 - New Portuguese noun chunks.
@@ -234,8 +234,18 @@ recommend running your test suite to verify that the pipeline still performs as
 expected.
 
 If you save your pipeline with `nlp.to_disk()`, it will be saved in the new v1.1
-format and should be fully compatible with `spacy-transformers` v1.1. If you're
-using one of the [trained pipelines](/models) we provide, you should run
-[`spacy download`](/api/cli#download) to update to the latest version. To see an
-overview of all installed packages and their compatibility, you can run
+format and should be fully compatible with `spacy-transformers` v1.1. Once
+you've confirmed the performance, you can update the requirements in
+[`meta.json`](/api/data-formats#meta):
+
+```diff
+  "requirements":[
+-    "spacy-transformers>=1.0.3,<1.1.0"
++    "spacy-transformers>=1.1.2,<1.2.0"
+  ]
+```
+
+If you're using one of the [trained pipelines](/models) we provide, you should
+run [`spacy download`](/api/cli#download) to update to the latest version. To
+see an overview of all installed packages and their compatibility, you can run
 [`spacy validate`](/api/cli#validate).
