--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -27,7 +27,7 @@ More details: https://github.com/explosion/thinc-apple-ops
 
 </Infobox>
 
-### Registered scoring functions for each component in the config {#registered-scoring-functions}
+### Registered scoring functions {#registered-scoring-functions}
 
 To customize the scoring, you can specify a scoring function for each component
 in your config from the new `scorers` registry:
@@ -39,7 +39,7 @@ factory = "tagger"
 scorer = {"@scorers":"spacy.tagger_scorer.v1"}
 ```
 
-### Overwrite settings for pipeline components {#overwrite}
+### Overwrite settings {#overwrite}
 
 Most pipeline components now include an `overwrite` setting in the config that
 determines whether existing annotation in the `Doc` is preserved or overwritten:
@@ -65,11 +65,11 @@ doc = nlp(doc)
 
 ### Support for floret vectors {#vectors}
 
-We have published [`floret`](https://github.com/explosion/floret), an extended
+We recently published [floret](https://github.com/explosion/floret), an extended
 version of [fastText](https://fasttext.cc) that combines fastText's subwords
-with Bloom embeddings for compact, full-coverage vectors. Using subwords means
-that there are no OOV words and due to Bloom embeddings, the vector table can be
-kept very small at <100K entries. Bloom embeddings are already used by
+with Bloom embeddings for compact, full-coverage vectors. The use of subwords
+means that there are no OOV words and due to Bloom embeddings, the vector table
+can be kept very small at <100K entries. Bloom embeddings are already used by
 [HashEmbed](https://thinc.ai/docs/api-layers#hashembed) in
 [`tok2vec`](https://spacy.io/api/architectures#tok2vec-arch) for compact spaCy
 models.
