--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -9,28 +9,27 @@ menu:
 ## New Features {#features hidden="true"}
 
 spaCy v3.2 adds support for [`floret`](https://github.com/explosion/floret)
-vectors, makes custom doc creation and scoring easier, and includes many bug
+vectors, makes custom `Doc` creation and scoring easier, and includes many bug
 fixes and improvements. For the trained pipelines, there's a new transformer
 pipeline for Japanese and the Universal Dependencies training data has been
 updated across the board to the most recent release.
 
 <Infobox title="Improve performance for spaCy on Apple M1 with AppleOps" variant="warning" emoji="📣">
 
-spaCy is now up to **8&times;** faster on M1 Macs by calling into Apple's native
-Accelerate library for matrix multiplication.
+spaCy is now up to **8 &times; faster on M1 Macs** by calling into Apple's
+native Accelerate library for matrix multiplication. For more details, see
+[`thinc-apple-ops`](https://github.com/explosion/thinc-apple-ops).
 
 ```bash
-pip install spacy[apple]
+$ pip install spacy[apple]
 ```
-
-More details: https://github.com/explosion/thinc-apple-ops
 
 </Infobox>
 
 ### Registered scoring functions {#registered-scoring-functions}
 
 To customize the scoring, you can specify a scoring function for each component
-in your config from the new `scorers` registry:
+in your config from the new [`scorers` registry](/api/top-level#registry):
 
 ```ini
 ### config.cfg (excerpt) {highlight="3"}
@@ -53,9 +52,10 @@ overwrite = false
 
 ### Doc input for pipelines {#doc-input}
 
-`nlp` and `nlp.pipe()` accept `Doc` input, skipping the tokenizer if a `Doc` is
-provided instead of a string. This makes it easier to create a `Doc` with custom
-tokenization or to set custom extensions before processing:
+[`nlp`](/api/language#call) and [`nlp.pipe`](/api/language#pipe) accept
+[`Doc`](/api/doc) input, skipping the tokenizer if a `Doc` is provided instead
+of a string. This makes it easier to create a `Doc` with custom tokenization or
+to set custom extensions before processing:
 
 ```python
 doc = nlp.make_doc("This is text 500.")
@@ -65,20 +65,19 @@ doc = nlp(doc)
 
 ### Support for floret vectors {#vectors}
 
-We recently published [floret](https://github.com/explosion/floret), an extended
-version of [fastText](https://fasttext.cc) that combines fastText's subwords
-with Bloom embeddings for compact, full-coverage vectors. The use of subwords
-means that there are no OOV words and due to Bloom embeddings, the vector table
-can be kept very small at <100K entries. Bloom embeddings are already used by
-[HashEmbed](https://thinc.ai/docs/api-layers#hashembed) in
-[`tok2vec`](https://spacy.io/api/architectures#tok2vec-arch) for compact spaCy
-models.
+We recently published [`floret`](https://github.com/explosion/floret), an
+extended version of [fastText](https://fasttext.cc) that combines fastText's
+subwords with Bloom embeddings for compact, full-coverage vectors. The use of
+subwords means that there are no OOV words and due to Bloom embeddings, the
+vector table can be kept very small at <100K entries. Bloom embeddings are
+already used by [HashEmbed](https://thinc.ai/docs/api-layers#hashembed) in
+[tok2vec](/api/architectures#tok2vec-arch) for compact spaCy models.
 
 For easy integration, floret includes a
 [Python wrapper](https://github.com/explosion/floret/blob/main/python/README.md):
 
 ```bash
-pip install floret
+$ pip install floret
 ```
 
 A demo project shows how to train and import floret vectors:
@@ -130,56 +129,49 @@ For the default project settings with 1M (3.3G) tokenized training texts and 50K
 
 ### Updates for spacy-transformers v1.1 {#spacy-transformers}
 
-`spacy-transformers` v1.1 has been refactored to improve serialization and
-support of inline transformer components and replacing listeners. In addition,
-the transformer model output is provided as
+[`spacy-transformers`](https://github.com/explosion/spacy-transformers) v1.1 has
+been refactored to improve serialization and support of inline transformer
+components and replacing listeners. In addition, the transformer model output is
+provided as
 [`ModelOutput`](https://huggingface.co/transformers/main_classes/output.html?highlight=modeloutput#transformers.file_utils.ModelOutput)
 instead of tuples in
 `TransformerData.model_output and FullTransformerBatch.model_output.` For
 backwards compatibility, the tuple format remains available under
 `TransformerData.tensors` and `FullTransformerBatch.tensors`. See more details
-in the
-[transformer API docs](https://spacy.io/api/architectures#TransformerModel).
+in the [transformer API docs](/api/architectures#TransformerModel).
 
 `spacy-transfomers` v1.1 also adds support for `transformer_config` settings
 such as `output_attentions`. Additional output is stored under
 `TransformerData.model_output`. More details are in the
-[TransformerModel docs](https://spacy.io/api/architectures#TransformerModel).
-The training speed has been improved by streamlining allocations for tokenizer
-output and there is new support for
-[mixed-precision training](https://spacy.io/api/architectures#TransformerModel).
+[TransformerModel docs](/api/architectures#TransformerModel). The training speed
+has been improved by streamlining allocations for tokenizer output and there is
+new support for [mixed-precision training](/api/architectures#TransformerModel).
 
 ### New transformer package for Japanese {#pipeline-packages}
 
 spaCy v3.2 adds a new transformer pipeline package for Japanese
-[`ja_core_news_trf`](https://spacy.io/models/ja#ja_core_news_trf), which uses
-the `basic` pretokenizer instead of `mecab` to limit the number of dependencies
-required for the pipeline. Thanks to Hiroshi Matsuda and the spaCy Japanese
-community for their contributions!
+[`ja_core_news_trf`](/models/ja#ja_core_news_trf), which uses the `basic`
+pretokenizer instead of `mecab` to limit the number of dependencies required for
+the pipeline. Thanks to Hiroshi Matsuda and the spaCy Japanese community for
+their contributions!
 
-### Pipeline updates {#pipeline-updates}
-
-Additional trained pipeline updates:
+### Pipeline and language updates {#pipeline-updates}
 
 - All Universal Dependencies training data has been updated v2.8.
 - The Catalan data, tokenizer and lemmatizer have been updated, thanks to Carlos
   Rodriguez and the Barcelona Supercomputing Center!
 - The transformer pipelines are trained using spacy-transformers v1.1, with
   improved IO and more options for
-  [model config and output](https://spacy.io/api/architectures#TransformerModel).
+  [model config and output](/api/architectures#TransformerModel).
 - Trailing whitespace has been added as a `tok2vec` feature, improving the
   performance for many components, especially fine-grained tagging and sentence
   segmentation.
 - The English attribute ruler patterns have been overhauled to improve
   `Token.pos` and `Token.morph`.
 
-### Language updates {#language-updates}
-
-- New Irish lemmatizer.
-- New Portuguese noun chunks.
-- Improved Spanish noun chunks.
-- Additional updates for Bulgarian, Catalan, Sinhala, Spanish, Tagalog, Tigrinya
-  and Vietnamese.
+spaCy v3.2 also features a new Irish lemmatizer, support for `noun_chunks` in
+Portuguese, improved `noun_chunks` for Spanish and additional updates for
+Bulgarian, Catalan, Sinhala, Spanish, Tagalog, Tigrinya and Vietnamese.
 
 ## Notes about upgrading from v3.1 {#upgrading}
 
@@ -215,31 +207,32 @@ working as expected, you can update the spaCy version requirements in the
 To update a config from spaCy v3.1 with the new v3.2 settings, run
 [`init fill-config`](/api/cli#init-fill-config):
 
-```bash
-python -m spacy init fill-config config-v3.1.cfg config-v3.2.cfg
+```cli
+$ python -m spacy init fill-config config-v3.1.cfg config-v3.2.cfg
 ```
 
-In many cases (`spacy train`, `spacy.load()`), the new defaults will be filled
-in automatically, but you'll need to fill in the new settings to run
+In many cases ([`spacy train`](/api/cli#train),
+[`spacy.load`](/api/top-level#spacy.load)), the new defaults will be filled in
+automatically, but you'll need to fill in the new settings to run
 [`debug config`](/api/cli#debug) and [`debug data`](/api/cli#debug-data).
 
 ## Notes about upgrading from spacy-transformers v1.0 {#upgrading-transformers}
 
 When you're loading a transformer pipeline package trained with
-`spacy-transformers` v1.0 after upgrading to `spacy-transformers` v1.1, you'll
-see a warning telling you that the pipeline may be incompatible.
-`spacy-transformers` v1.1 should be able to import v1.0 `transformer` components
-into the new internal format with no change in performance, but here we'd also
-recommend running your test suite to verify that the pipeline still performs as
-expected.
+[`spacy-transformers`](https://github.com/explosion/spacy-transformers) v1.0
+after upgrading to `spacy-transformers` v1.1, you'll see a warning telling you
+that the pipeline may be incompatible. `spacy-transformers` v1.1 should be able
+to import v1.0 `transformer` components into the new internal format with no
+change in performance, but here we'd also recommend running your test suite to
+verify that the pipeline still performs as expected.
 
-If you save your pipeline with `nlp.to_disk()`, it will be saved in the new v1.1
-format and should be fully compatible with `spacy-transformers` v1.1. Once
-you've confirmed the performance, you can update the requirements in
-[`meta.json`](/api/data-formats#meta):
+If you save your pipeline with [`nlp.to_disk`](/api/language#to_disk), it will
+be saved in the new v1.1 format and should be fully compatible with
+`spacy-transformers` v1.1. Once you've confirmed the performance, you can update
+the requirements in [`meta.json`](/api/data-formats#meta):
 
 ```diff
-  "requirements":[
+  "requirements": [
 -    "spacy-transformers>=1.0.3,<1.1.0"
 +    "spacy-transformers>=1.1.2,<1.2.0"
   ]
