--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -171,7 +171,7 @@ their contributions!
 
 spaCy v3.2 also features a new Irish lemmatizer, support for `noun_chunks` in
 Portuguese, improved `noun_chunks` for Spanish and additional updates for
-Bulgarian, Catalan, Sinhala, Spanish, Tagalog, Tigrinya and Vietnamese.
+Bulgarian, Catalan, Sinhala, Tagalog, Tigrinya and Vietnamese.
 
 ## Notes about upgrading from v3.1 {#upgrading}
 
