--- a/website/docs/usage/v3-2.md
+++ b/website/docs/usage/v3-2.md
@@ -157,7 +157,7 @@ their contributions!
 
 ### Pipeline and language updates {#pipeline-updates}
 
-- All Universal Dependencies training data has been updated v2.8.
+- All Universal Dependencies training data has been updated to v2.8.
 - The Catalan data, tokenizer and lemmatizer have been updated, thanks to Carlos
   Rodriguez and the Barcelona Supercomputing Center!
 - The transformer pipelines are trained using spacy-transformers v1.1, with
